--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,17 @@
 <html>
   <head>
     <title>myFlix</title>
-    
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
   </head>
+  <header>
+    <h1 class="logo">myFlix</h1>
+  </header>
   <body>
     <div class="app-container"></div>
     <script type="module" src="index.jsx" ></script>
